--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,7 @@ test:
     pre:
         - ./check_sys.sh
         - ./configurations/git/do_git.sh
+        - ./configurations/tmux/do_tmux.sh
     override:
         - grep -w ubuntu ./data/os
         - test -f ~/.gitconfig
