--- a/configurations/tmux/tmux.conf
+++ b/configurations/tmux/tmux.conf
@@ -1,6 +1,10 @@
 set-window-option -g mode-keys vi
 set-window-option -g xterm-keys on
 
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
 unbind Space
 bind-key Space last-window
 # unbind C-b
