--- a/configurations/tmux/tmux.conf
+++ b/configurations/tmux/tmux.conf
@@ -32,6 +32,8 @@ set-option -g history-limit 10000
 
 bind -n M-right resize-pane -R
 bind -n M-left resize-pane -L
+bind -n M-down resize-pane -D
+bind -n M-up resize-pane -U
 
 # setw -g mode-mouse on
 
