--- a/playbook.yml
+++ b/playbook.yml
@@ -1,15 +1,3 @@
 - hosts: all
-  tasks:
-      - name: output operating system
-        command: /bin/echo my OS
-
-      - name: install the_silver_searcher
-        package: name=the_silver_searcher state=present
-
-      - name: install git
-        package: name=git state=present
-
-      - name: sync git config
-        template:
-            src: './configurations/git/gitconfig'
-            dest: '~/.gitconfig'
+  roles:
+      - common
