--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: python
-sudo: true
-python:
-    - '3.6'
+
+before_install:
+  - sudo apt-get update -qq
+
+install:
+  - pip install ansible
+
+script:
+  - make check
+  - make play
