--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -41,4 +41,4 @@
     - rc_files
 
 - name: verify vim is installed
-  shell: vim --version | grep '8.0'
+  shell: (vim --version | grep '8.0') && (vim --version grep '+python3')
