--- a/roles/common/tasks/vim.yml
+++ b/roles/common/tasks/vim.yml
@@ -16,4 +16,4 @@
       force: yes
 
 - name: verify vim is installed
-  shell: (vim --version | grep '8.0') && (vim --version | grep '+python3')
+  shell: (~/bin/vim --version | grep '8.0') && (~/bin/vim --version | grep '+python3')
