--- a/roles/common/tasks/vim.yml
+++ b/roles/common/tasks/vim.yml
@@ -6,7 +6,6 @@
 - name: install vim for Ubuntu
   when: ansible_os_family == 'Debian'
   shell: '{{playbook_dir}}/compile-vim.sh python3'
-  become: true
 
 - name: symlimk vimrc
   file:
@@ -16,4 +15,4 @@
       force: yes
 
 - name: verify vim is installed
-  shell: (~/bin/vim --version | grep '8.0') && (~/bin/vim --version | grep '+python3')
+  shell: (vim --version | grep '8.0') && (vim --version | grep '+python3')
