--- a/roles/common/tasks/fzf.yml
+++ b/roles/common/tasks/fzf.yml
@@ -5,6 +5,8 @@
 - name: verify fzf is installed
   shell: . ~/.fzf.bash  && fzf --version
   register: fzf
+  args:
+    executable: /bin/bash
 
 - debug: msg="{{fzf.stdout_lines}}"
 
