--- a/roles/common/tasks/vim.yml
+++ b/roles/common/tasks/vim.yml
@@ -20,3 +20,5 @@
 
 - name: verify vim is installed
   shell: (vim --version | grep '8.0') && (vim --version | grep '+python3')
+  args:
+    executable: /bin/bash
