--- a/roles/common/tasks/bash.yml
+++ b/roles/common/tasks/bash.yml
@@ -8,6 +8,7 @@
   lineinfile:
     path: ~/.bash_profile
     line: '[ -f ~/.bashrc ] && source ~/.bashrc'
+    create: yes
 
 - name: write rice.bash
   template:
