--- a/roles/common/tasks/other_tools.yml
+++ b/roles/common/tasks/other_tools.yml
@@ -2,3 +2,8 @@
   package: name=lsof state=present
   when: ansible_os_family == 'Debian'
   become: true
+
+- name: install tree
+  package: name=tree state=present
+  when: ansible_os_family == 'Debian'
+  become: true
