--- a/roles/common/tasks/vim.yml
+++ b/roles/common/tasks/vim.yml
@@ -18,15 +18,7 @@
       state: link
       force: yes
 
-- name: check vim version
-  shell: vim --version
-  register: vim_version
-  check_mode: no
-
-- debug:
-    msg: "{{vim_version.stdout_lines}}"
-
-- name: verify vim is installed
-  shell: "(vim --version | grep '8.0') && (vim --version | grep '+python3')"
+- name: verify vim 8.0 is installed
+  shell: "vim --version | grep '8.0'"
   args:
     executable: /bin/bash
