--- a/roles/common/tasks/other_tools.yml
+++ b/roles/common/tasks/other_tools.yml
@@ -7,3 +7,22 @@
   package: name=tree state=present
   when: ansible_os_family == 'Debian'
   become: true
+
+- name: add apt-key for yarn
+  become: true
+  when: ansible_os_family == 'Debian'
+  apt_key:
+    url: https://dl.yarnpkg.com/debian/pubkey.gpg
+    state: present
+
+- name: add apt repository for yarn
+  become: true
+  when: ansible_os_family == 'Debian'
+  apt_repository:
+    repo: deb https://dl.yarnpkg.com/debian/ stable main
+    state: present
+
+- name: install yarn
+  package: name=yarn state=present
+  when: ansible_os_family == 'Debian'
+  become: true
