--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,8 +7,8 @@
 - include: the_silver_searcher.yml
   tags: the_siver_searcher
 
-- include: bash.yml
-  tags: bash
+- include: shell.yml
+  tags: shell
 
 - include: vim.yml
   tags: vim
