--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -25,8 +25,8 @@
 - include: zed.yml
   tags: zed
 
-- include: other_tools.yml
-  tags: other_tools
+- include: packages.yml
+  tags: packages
 
 - include: docker.yml
   tags:
