--- a/roles/common/tasks/packages.yml
+++ b/roles/common/tasks/packages.yml
@@ -12,7 +12,7 @@
     repo: deb https://dl.yarnpkg.com/debian/ stable main
     state: present
 
-- name: install lsof
+- name: install packages on Ubuntu
   package: name={{item}} state=present
   when: ansible_os_family == 'Debian'
   become: true
@@ -20,3 +20,4 @@
     - lsof
     - tree
     - yarn
+    - silversearcher-ag
