--- a/ansible/roles/common/tasks/packages.yml
+++ b/ansible/roles/common/tasks/packages.yml
@@ -9,8 +9,11 @@
   become: true
   when: ansible_os_family == 'Debian'
   apt_repository:
-    repo: deb https://dl.yarnpkg.com/debian/ stable main
+    repo: '{{item}}'
     state: present
+  with_items:
+    - 'ppa:gophers/archive'
+    - deb https://dl.yarnpkg.com/debian/ stable main
 
 - name: install packages on Ubuntu
   package: name={{item}} state=present
@@ -23,3 +26,7 @@
     - silversearcher-ag
     - zsh
     - git
+    - python-dev
+    - python3-dev
+    - cmake
+    - golang-1.8-go
