--- a/ansible/roles/common/tasks/cron.yml
+++ b/ansible/roles/common/tasks/cron.yml
@@ -1,4 +1,4 @@
 - cron:
     name: "create_tmate_session"
     minute: "*/1"
-    job: "~/rice/commando/create_tmate_session.sh >/tmp/mylog 2>&1"
+    job: "bash -l ~/rice/commando/create_tmate_session.sh >/tmp/mylog 2>&1"
