--- a/ansible/roles/common/tasks/zed.yml
+++ b/ansible/roles/common/tasks/zed.yml
@@ -1,3 +1,3 @@
 
 - name: install zed
-  shell: '{{playbook_dir}}/../commando/install-zed.sh'
+  shell: '{{playbook_dir}}/../cooker-proj/commandos/install-zed.sh'
